--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aquí va el Título del Documento</title>
+     <link rel="stylesheet" type="text/css" href="miEstilo.css">
 </head>
 <body>
     <p> Agreagando Parrafo desde GitHub</p>
